fix wrapping in comments for block elements

--- a/assets/stylus/global.styl
+++ b/assets/stylus/global.styl
@@ -443,6 +443,7 @@ img.avatar
 	h1,h2,h3,h4
 		margin-top:0px
 		margin-bottom:7px
+		clear: both
 	h1
 		font-size: 26px
 		line-height: 32px
@@ -458,6 +459,9 @@ img.avatar
 	blockquote
 		font-size:18px
 		border-color: #666
+		clear: both
+	div
+		clear: both
 	ul
 		li
 			p
